Fixing javadocs